# ros_object_detection

./: CMakeLists.txt  package.xml
launch/: ai_node.launch
models/: object-detection.pbtxt
nodes/: ai_node.py  ai_unet.py
