<?xml version="1.0"?>
<package>
  <name>ai_node</name>
  <version>0.0.1</version>
  <description>AI Node for object detection using various CNN Networks</description>
  <maintainer email="y.khedar@tu-bs.de">Yogesh Khedar</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/ahb_rospy_example</url> -->


  <author email="andreas.bihlmaier@gmx.de">Andreas Bihlmaier</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>custom_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>custom_msgs</run_depend>

</package>
